SubBt/force-app/main/default/objects/Journal_Entry_Lines__c/Journal_Entry_Lines__c.object-meta.xml
<CustomObject>
    <label>Journal Entry Line</label>
    <nameField>
        <displayFormat>JE-{0000}</displayFormat>
        <label>Journal Entry Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Entry Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>