SubBt/force-app/main/default/objects/Journal_Entry_Lines__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal Entry Lines</relationshipLabel>
    <relationshipName>Journal_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>