SubBt/force-app/main/default/objects/Journal_Entry_Lines__c/fields/Amouont__c.field-meta.xml
<CustomField>
    <fullName>Amouont__c</fullName>
    <formula>Debit__c +  Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amouont</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>