SubBt/force-app/main/default/objects/Journal_Entry_Lines__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Date the Journal Entry was entered.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>