SubBt/force-app/main/default/objects/Journal_Entry_Lines__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>