SubBt/force-app/main/default/objects/Journal_Entry_Lines__c/fields/Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry__c</fullName>
    <label>Journal Entry</label>
    <referenceTo>Journal_Entry__c</referenceTo>
    <relationshipLabel>Journal Entry Lines</relationshipLabel>
    <relationshipName>Journal_Entry_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>